--- a/Inventory/Dashboard.resx
+++ b/Inventory/Dashboard.resx
@@ -118,10 +118,128 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="panel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAYGBgYGBgYHBwYJCgkKCQ0MCwsMDRQODw4PDhQfExYTExYT
+        HxshGxkbIRsxJiIiJjE4Ly0vOEQ9PURWUVZwcJb/2wBDAQYGBgYGBgYHBwYJCgkKCQ0MCwsMDRQODw4P
+        DhQfExYTExYTHxshGxkbIRsxJiIiJjE4Ly0vOEQ9PURWUVZwcJb/wgARCAHeA1IDASEAAhEBAxEB/8QA
+        GwABAQEBAQEBAQAAAAAAAAAAAAECBgUHBAj/2gAIAQEAAAAA/pBSlKUqqUUqlKUUtKpRaVQAAAAADxCl
+        VRVFVVFKLSlFKVVKKqqoAAAAA8JSlKqilKVVKKVSqKKqlUUqqoAAAA8ApVKUtKKpRVVQqqVQotUpSlVR
+        QAADnqKKqilUqlKoqqUUpVKUVVKVRaVQAA5xVKUVRVKVVFUUtUUpSqUUVVUopaqgA5pSlVSiqUoqqUqi
+        lKqilVRRSqpSlKqqDmFKVSqoUpVKUqqKUqlVRSlUootFpSlUrl1UVSi0qilKopVVRSilqlFKoqlFKqqU
+        OYUqlKUpS0pRVKUpVUVRSrRSi0VRSlLSuXVRS0pRVKVSilVSilpSlKVSqFUqlFKquXUqlKVSlKUqlUUp
+        VKUtFKVRaLQqi0Uo5kKVSlKVVFUUtKooqlKVVKUopaopSlKrl1pQqlUopaUpSlLSilKpSlVRVFKtFFKr
+        l6UWlFKpSlKqlFUVVKKUtKKpVKUpSqUrl1KpVKoVSqKoqqUqiqVRSlKoqqUpVC1TmCilUWlFKVSlKVSl
+        UotKooqqKUtKUqiuXUtKKpSlVRSlUoqqUqhVKqlFUpSlUpVOYKFVSi0UpaUUqlUUqqKUqlVQpVKopaU5
+        dVKopVKUqiqpSlKUpVUoqlFpVFKVRSq5gUVVKKqlKUpVUpRVKUpVKUoqqpSiqUrl1VSilpRSqoqlKUql
+        FVSilpSqFUqlKLTl6UqqKKtKFVSlKUpVUUqlUKqqKUqlUpTl6VRSqopTQopVKVSlKoqilUpSqoqlKpTl
+        6oqilVSlFVSlKVSqKVSlKUpVKLSlUUrmBVKUqilVRSqpRSqUqlKVSilUqilpSqOYKKpVKooqqUUpaoVV
+        KKpVFopSqUopao5dapQqloWilUqilKqilUpSqUqlFKpVFK5gUqqoUqlKpRVUpRVUpRaUVSlVSilUpTl6
+        pSirSilUpVFKVVCqqlFKpSqKVVKKUrmBSqopVUopaUoqiqVRSqpRS0pRVKVVFOYKUVVUUVVUKWlKVRVK
+        ootKopVUUqiqWuciIKUpaKUqqoUqlKopS0pRVUoqlUpRSvEkSRlAqiqqhSrShVUpVFKVVCqWlFKqiqPJ
+        SJEjKSAtC0qilWiilUqiqKpaFKaFFLSl8+SJEjKRJEgUpS1RRaVQpVUpRS0qiiqpSlPzSRGUiSMokiRB
+        SlKWilVSilUpVFKqlFKqlGJIkSRJEiRJIkkIUKpVUotUUUtKVRRVVRSqqpEjJJEiZSJEiSRIgpRVVRSq
+        pRS0VVFFUtCn6ZGUSMpEiSJIkSSIkkSClFVRVFVVClVSlUUqj98iRJIkiSJEkSJJESSJEkgoUq0UVVUo
+        pVKVRSr6kkSJEkiMokkSREkiMpEkSMoKUVVKKVVKKWiqovspEiRJEkiMokiMpEkSRIkkMxIgpRVVRRap
+        QqqUdDJIkSREkiRIkiSREkiRIkiRJEkSIKUqloUqqoUq9NJESSJIkiRIkiSJEkiJJESMpEkSRJEFKUql
+        KKtKHWyJIkiRJIkRlIkiMpEkSJIkSRIkiRJIkgVRVUopVV2UiSJEkSRJEiSJEkSJJEkSJEkSJJISSJEk
+        SClKVSlHcyJIkkRJEkSRJEiRIkkSJIkZRJEiJJIkZSJIiCqKpVd9JEiSREiSJEkSSIkjKJJESSJEjKRE
+        kSSJEjKJlEFKUfRYkkSRIkiRJEkSJIkiMpEiSJIkiRJIkSJIkiRJEZiQKX6SiSJEkSRJEiSIkkSJJEiS
+        IkkSRJESSJIkSJIkiSJGUSH09IkSJIkiSIykSRIkZSJEjKRIkkMpEiSMokiRIkkSMokT6jGUkSJEiSJG
+        USJIyiRJEkiSJEkSRGUSRJEjKJIkSSJEifTwkkkSSIkiJIkiMpIjKRJEZRJIkSJJEiSJEiSJGUiRIk+l
+        gCSSJGYSJEkSRIkkSJIiSJJEkSJEkSRIkiSJIkSRIfRgABmJIkkRIkiSJIkSRJEiRJEZSRIkiRJISSJI
+        kiRPoYAABIykkiIkiRJJESRIyiSREkSRIkiRJEkSMokid+AAAAiSSJJESJEkiMoyiRJIiSRJEkSJIiYq
+        TNkSd2AAAAAkkSSJEiSIkkSJIkiSIkkSJIkiR+TeEksm99uAAAAABGUkRgiRJEjKRIkiMpEiMpEkmKmb
+        Ekf/xAAaAQEBAQEBAQEAAAAAAAAAAAAAAQIFBgQD/9oACAECEAAAAPuRCIiEJAiIQgAAH3oSEIkIQhCI
+        QgAA+9LCIQiQhCEQREAAdBAhEQiIRCEIQiAB0UIIIiEREIQRCIQB0kIQQhCQiEhAiIQgdRIiCBEQiIgk
+        IIRCIdWEMkIIIhIRCEgRCIdWIIiIQIiEJCEJAiIdUkQhERAQkIRIQhCEdWCGREIhBBIQiQhEEdQgREIi
+        EQIREIhIQh1CEEIiEQiCCEhEQiHUQggiIJEIIQSEQiEdWQhCWIRBIhCEsQiIiHVhEQggkIQkIQliIQkd
+        VEIhIEERCISEJYRCHURCIhCECRBERCBCQdQiIRERLCCEhEJBBBHUQhCJEIQQRCIiEIIdMQJEEiEIQQiI
+        RCIHUiCBIhCRBBCEQZQgdSIgQMkIZIQIhEEiEdWIJAgiQhERAgkIIh1ERCEIESEIhIEIRCHUIiIghBCJ
+        CERAgkQdVIhEhCBCIhEQhCCIdQiEQkQQliEQkIhBBHUIJEIZIQEJEEiEIIdRCWEiIRCIEEiEJEEHUgiB
+        EhCIRBBIgiQhHVhBECIREQiCCISEIdGhAiCIREQhBBEhCH3W0ECQIhERCIIIiIPsWqqyAhCQhCRCCCIR
+        9Ftq1SxBCEQiEhCBEI/TVq1bVBBCCRCEiECBatttWqWxAiCQhCQkBEtVbbWlVQghBEhCIRB+dtotttaV
+        VsIIgRCQiEPntttpV0ttqqEBJYiEREJ81W1baWtVbVq2ECEEhERPjWrba1SrbatqqsQIQiIRz7VVbbat
+        VbbatVqWQISxIRy9LVtLbbaqrbbWi1UQQgici22raW2rbaqtVbaqrCCIHEq221bS22rpS22ratWogRHD
+        VbVtq6lW22tUW22tKqhAeetqrVulrRVultpa1VtpbUQebtttVaurVqq1WltKuqtq1Qnmqatq1aatW1at
+        tXSqatapap5datttVpVtrS1VtrVVVttq1XlbWqW2200XS22qW222qq3S1p5VWlq1bbaq1q1baWrbbaW2
+        1b5cLa0W1ppaq22rbS1qrbS215oCrbVq221TS3SrVq221oV50AVbatW22qtW220tq222nngALVtWrdLa
+        aNVbatLdLXAAAFtq2mrVq2l1VtWSrf04QAAKttWrbaq2rbWirbf/xAAaAQEBAQEBAQEAAAAAAAAAAAAA
+        AQIFBgQD/9oACAEDEAAAAPgVSqLVVVoKaFAABzy0pVKWqq0FVVAAHNtKWlKVaqloUpaABzKpVVQ0Uq1V
+        oKqigHLpVKq0VSlW0qilUUHKoq0pVoVVUtqlFVRRyLVFqlLbKVVKq1VBaovIFqirVFqiqqlqqUUtcgot
+        opVpVoqirVU0CnIpaFtFU0KqlUpaqrQcilVRVpSrSlUWlLapoceqUtCqqqVS1SzRSrVW8YtUVVKpaVS0
+        qi0pVpx1qlqlKVVLSqVaFqlW8Yq1VVSlKqlqlK1KUtLyAVbSrRVFWirVKqiqci0CrapSqoq0qlpVUpyF
+        UopdFUqqFqlVaUqnILSqFVVqlKpVpSrSqcdVqqUUtWqUVS0qqVS8dVLVUos0q1VFUpapVHHq0qmiqDRa
+        aKKpVUtLxyqpVVaUKq1aKpSrRbx6FUtUq1QVaqrRVFWnIUpSlqqpaCq0VS0pRySqoqlNFU0CqtUqlspy
+        FK0UpSqaKqhVaKpS1x1Kq1RVKU0qlBbVpVHIUqlVaFLVKtUoqqq0vGqlVVLaCrSlqqoLVVbxqpVLSqqi
+        lNFVaUKaVyAtUpVpaUVSqqqtBVczIUqqKq1VFKpapVUVzkiBTRSqqqoqlLVVaHwpEkBaWiqVaoqlKtpT
+        5ZEkSQKWlUqqtBopVqn4ySSRJIFKpVUqrQqqpTCJJJGUkClWiqpbQVbLTUmUiSSSJIFVRVVVWhVD9pJI
+        kjKSSREC1SirVVRVfREkkkiSSSJEgVVKVVpVF+zMiJJJJEkkkRIFqlFWlqnQkmZCSZkiJJJGUgVSqVTR
+        XSiJmRGZGWUkZjJJApaoqqdeRlJJlEkkkiSMplEgpSqqnaiSSJJMokkkkSSSRJIFKpVd6SSMpIkzIkTK
+        SRlJIyiBaUvoWYkkkiRJmREmZEkZSZSIFLXpZJIkykkkRmSRJGZIkkiRJAp6nKJJEzEkkiSSRJJJGUkk
+        iRIL6zLKSSJJIkmSSTKJJJJIkmUZRHr4zJIkZiSRmJIkzISZkSSMspEnsJEkkkiSMyJJIkkkkSRJmJJI
+        ynsIyiSSSRJGZIkkSSSZJJJJIkketEiRJJmIzEZkSSMpJMokkykSerBEiRJMspJEkkiSJMsxGZIkeoAI
+        kSRmSJJIkkTMSRmZImZHpgARIyZmUiSRmRJJEjMiSR6MAAkiRJMxEyjMiSSJKjL8fRgAAkiRlmJJJEyk
+        kSSJMv/EAB4QAQEBAQEAAwEBAQAAAAAAABEQACASAQIwQFAD/9oACAEBAAECAFcxVi5crl5Vjl5WKuVq
+        qrF/yVVY5eVyvDVWrGLVcrwsVi/4SrVWuVauVYvCrFy1quV4XKsV/rVcqvCrwq1VVi8KrlzyuVVVi5VY
+        v9armLwq5i5qrl/FVzHpiqq1VVr/AAK8PCrV5VXl4VyvDVWr01XOeFcuc5/JXKtWqsVaqtYtVytWqrFy
+        8MVXLVVVytVWrlVi8KuXOYq8qsXKrFaqxc8rlVVYuVWK8KscuVjyq5cvCrmKtcuXheFcufwVXOa5eFWq
+        rwqrwtVqvKqxVeFVatVavTVcrwqsVWLl4XKrHhVcuWqvS1Yq14Vq55Yq5Vcq8KuarVzlY8quXLwrGqxc
+        qrl5Vcq8qrwq1eVc1XlcrVqrmPKrmKtcxXhqrmMVavCtV4VWOVqsVi8rmLyqsY8sVq1VzFirF4VYq1VY
+        uVq5VcrwqxVqqxcvC5Vi1iuVzlYvKscvCrnOVq5VYvKuVXhVzVasVryq1zFq8K8Lwq5iq8LleGqxyvCr
+        y54VzVeFWrVWLVWrHKqxVeGKteFVi8KrXKxYtVXLlWNVYtVaqtVYuVYuVatVaueFauVVjwqxirHhWLwq
+        xy8KrwrWKrleFXLl4Vy1VXNYq5i54XKrnNVavKq8OaqqseFVisVa1VXPSq8rwsVq8KsXlV5VqsVq1Vq1
+        WKxVXPaq5irGKrF4VXLmqrGK1YrV4V4eFcvKqseFVzVq5ysXlVy5aq5qtXOVi5irwsVq8KrljFXNV4aq
+        xaq1WqrVV4XNVeVWLFWvCqrFiq8KtWKsXhWqrlVY5V5WqryrFqteVVa1V5VqxVi8qxVaqxyqry1XhVi8
+        K56VVzWKxirlc5WvKsVeVV4VV4aqscrwxWrwuXNYqrFXhcq1aq1WKsXhVeGqrmK1YqxeFXLFqrHK8LFW
+        LVWrFVi8Kq1qq8KsVcq5eVVYtVYxVjVWL0rwuVi8qr+CrmKvDVcxqqueVWMXNc5VzgAI8LFWLFVXh4VY
+        rysV4aqrl6VWuarEADyARqsVYvCqtaqtVWNVYvCq5rwq5yqwA8gAeQAyuVqsXhVXtVcxVi1Vy8qqr0qr
+        QAAAAAAAy1quXpVWrFXMVatVy5qqsYxVPIAAAB5AAAAjw1eF4VXhc5VyqtWKsViqquVAA8gAAAAAAABF
+        7VYvCqsVqsc5WNVYrFVXAHkAAAAAADyBgAAy14VcvCqv4KvSxaq5XhAAAPIAAAAAAAAB5ADLFzlYvKqv
+        DFXlVjmKuU8gAAAAAAAAHkAAAAACtWq1aqrw1Vq5asUADyAAAAAAAAAAAAAAeQCLFiqx4VVa1Vqq8AAA
+        AAAAAB5AAAAAPIAAAAARcvCsXlVeGqvQAAAAAAAAAAAAAAAAAeQAAACPC5VznhVeFirjyAAAAAAAAAAA
+        AAAAAAAAAAAAR4WK15VVrAAPIAAAAAAHkAAAAAAAAAAAAAA8gBlqxVi8KqoAAAAAAAAeQAAAAAAPIAAA
+        AAAAAB5ADK5Y5WLwoAAAAAAAAAAAAAAAeQA8gAAAAAAAAAGAjVYrUAAAAAAAPIAAAAAAAAAAAAAAAAAA
+        AAAABFrVAAAAAAAAwAAAAAAAB5AAAAAAAAAAAAAAAAisQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM
+        efIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABjyAAAAAeQAAAAAAPIAAAAAAAAAAAAAAAAAAABQPIA
+        AAAAAAAAAAAAAAAAAAAAeQAAAAAAAAAAD8QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADz+4AAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAfxGA8gAAAAAAAAAAAAAAAAAAAAAAAAAAB/SB5AD5+oAAAAAAAAAAAB5AAAAA
+        AAPt8gGA8h/ceQADyAAAAAAAAAAAAAAAHkAA+vx/y+N8fTfG+u+2+cfH18/4h8/UA+fgAwYPIYAAAADA
+        Bg+fgAwYA32/5/H0PPz9A8/PwB//xAAqEAABAgUEAgIBBQEAAAAAAAABEWEAAjBAYBASIFAhcCIxAyNC
+        UXGAkv/aAAgBAQADPwC1HSnOBkb2CY+LB9DlZ4nMDiLWD+mDUPsxvZJ6E5cPVp4mxNuaRtntnvDfH2a+
+        AP0A9aDrRij036c8nwF/Vx/wAKD6imKR0FkP8oHQcR1RpnQUxanQUDB90HMDTN2/Wvnp4mqeua6au1ya
+        wwYX4689+cYbmbI5a2p5HHRybmYOGDpDgTUmqNcnMDfNWaBYiuLYdW2CjpGvTDVm5nUXJotqejbCG4mD
+        zakOibpRYjMmqtWboWtmpteti7ZSPRrWzXTc2oyyJumA/swqFVhtQqeVReB6NrNuslP5Pyb/ALWJRN+T
+        Yu34/wDUBE3HYpQuHiX9P7G52WAZjJNP4BMfLwV8TbXjzKdwVFPyVREk00xnm8INvlIlWfdMVH15j4zz
+        n7DpCTov7VhumSFsF6mSdN0qwJQAAANBA3KyJA/jRhA8KIBXX//EABwRAQACAwEBAQAAAAAAAAAAABEA
+        EAEgMEBQYP/aAAgBAgEBAgDxm5+mPhGpqUQs7Hcs8h7zseU6noOx5j4Z4D4RoeA+qQ+WWUWUUUG5RZCz
+        gFhyNCzcso7mh3PWQ4mh9Ao0OJ804nmA9pDzGpZoHYNA6lgWECjcssooos1ORocDianpNj456zQ4noPK
+        cTznU9BDuWUeYDYIWWFkLKKLLDY0DYIUcCBZAogcANCBZAh4go5GpoEKNTc5FBZ4TU4nIs1NDQs7Z+Av
+        gOGdDkc2n051Oxa6sIGhoBZQQs4AWLiLiMcZo6AbAFHA1Vi6vE1A2IQ5BasY0xo3NDPjLdm3FLTj0HNd
+        ltpt4G+fAqrbFaV0e5DYhTSqq2zGVY6vcO+MqxVtYq00w3NCFlqsYqsXXGVV1fAarTstroqxaaeRoEIr
+        SsWKsW1ixxlpi8TZaVpaaYsXZiuMxeharSrSxaVYuqsVjwNWMVxStLTTjKq7KxXReKq6qsV0VaW2YyrG
+        ml2VVjoxWK2sXEVaVVV0aaWl2aVt1VYuqrFxG1bVVW1pWK6q0tNKxXd3dlpWLbStLbHGY7qrGMVYxaVt
+        i0qxdVeKrqrTFtWmlpaV8CsWlVVY0q002qr4Vi2sWLqq0urjKq+BYtqqrozGVYtZznMxlxHxtO7risXj
+        Oxr/AP/EACERAAIABQUBAQAAAAAAAAAAAAERACAwUGAQITFAkHCA/9oACAECAQM/APPM+mg/PDtolNEa
+        LpCwqR4K6Bxw3HfMjM9RZnTc4xk9IfUxhrxRXQ1DnLufEcQlvBCgWE9Lib//xAAbEQEAAgMBAQAAAAAA
+        AAAAAAARABABIDBAUP/aAAgBAwEBAgCl7NMx8N2flOq9Vx1fGxaXVVppVix0aaXqurwdVja7YjzeDa7r
+        bTGld3k+56Y6PB4PZ8DT0d3Z2bxHq9nZj2fC4zs7LorqrsrxadXVaaabY6ttLbild1XV6LHZ2XZ8K742
+        ea0t4pj4H3Ozyxu8HZjxeLHi0+x5Lbxdl6uyzHNYvB3dl0VppjTusVixtdXEWmmLbbT3XwvxXR6LzezT
+        bT4X4zo64jTTsu75WPhWsRXmtvJivF6uzjKxYq8m2mm23Ziujqxi8mYpYuzxXdmOLGPDFvDHle7xfE6s
+        fE028Ho7tvd5h3dV8DTzPC6rs8HkEKNmmlppp1Y2tMcaoQshq027Yix0eKtNgAUGrqvB1eakKDOAhQaL
+        ji00+AM4KIAah3fGAQgUGoHnegVnAQgAZwAcXZmNXcCygKIGgFvjdSAGhAJmzMCBxYtNtKqhCAFgEAgE
+        As4NvIhCGcAWAAFZxAAgHdooAM0AFAAUQACwNHoFBCwCgAgXnBCwOONQoCAEzQAUEAgQCEADg2BmgLNA
+        AKAAogWBCnYAAIBQEzM0BmFEACECBADcCgM0QCBZAAoM4AgQIBQUUABYQAsAgGcF5xAKKAAoIFgFgEAg
+        BZALM4AAoAIWZgZgBeYBmAUAEAC84AgTNAGwFEAoAhAoAogBQBACBwCEACgLAoCwAsCAByITMAzghAKA
+        gFZoA0AgHQDQAoCwKIQAAAAO5CwgEKziABQUBiYhnBmHqCizNhDTPD//xAAhEQACAgIBBAMAAAAAAAAA
+        AAABEVBgIEAAEDBwkCFBYf/aAAgBAwEDPwCaHipzBui9Gw9Prqq7i3R4rNxNi+5o278izAHXNbUGoMds
+        cW8LeoN2EwB4cTkpt6igxrDESQ0zIGXDPG/joZJZ/wD/2Q==
+</value>
+  </data>
   <data name="button6.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABkAAAAiCAYAAACqVHINAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAT1JREFUSEvtl+FtwyAQhRnBGzQb1BskI/AnCj5jQOoAGSEjdISOkBEyQkbICBnB
+        DwAACw8BkvkDpQAAAT1JREFUSEvtl+FtwyAQhRnBGzQb1BskI/AnCj5jQOoAGSEjdISOkBEyQkbICBnB
         ucOH1VrUDe1JkVI/6Un2Ye7DMphDkbTWFYDbN40/ok8ydj4mJxEAg2cA30sb8160DpXCi3cOXgBCsDZs
         BKyHfL43xh0IEm+221Dzy4mo67o1D/6q+KLnNlGNuR8KodmGPtzrL7OJNQsBgDrFSzz9rimehZDa1vnc
         iL+ztW7PXUf9CJHQP4Lsdva1abp1ibnrqFnIp9Va5KLZFUKo2tafSow5jgBvL5wiahYipQVSpFmIMWaF
@@ -132,7 +250,7 @@
   <data name="button5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAbCAYAAABiFp9rAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAd5JREFUSEvtVtFxwjAM7Qhs0I7ABrAB+eFIHJL4rgMwAiMwQkdgBEboCBmBEdL3
+        DwAACw8BkvkDpQAAAd5JREFUSEvtVtFxwjAM7Qhs0I7ABrAB+eFIHJL4rgMwAiMwQkdgBEboCBmBEdL3
         bMk4cUiTfvWDd+e78CRLsixLvM2BMeZdPkeRZdlKPpejKKpNUTQ3Y5pO1h3ra+g0z/MPyqDbFkXdCD0P
         xtTnyEFXls5JcBgbtNauwLUqh8OLiKZBI7qJDrPMurTkuWXkOJF3NjxZWbp9LqDDoT4J/RxMAZXzvD4L
         1QNOd6EcelehAhDYjjI6FGociHItiq1QCSRVzpieNgb4b8p5x0KlMKayXimNNgZ05E4+k2oE79LLVAqV
@@ -146,7 +264,7 @@
   <data name="button4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAcCAYAAAB/E6/TAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAPxJREFUSEvtltENgjAQhhmBDXQD2UA30TdsMfGqb9IqGzgCIzgCIzACIzCC3tWD
+        DwAACw8BkvkDpQAAAPxJREFUSEvtltENgjAQhhmBDXQD2UA30TdsMfGqb9IqGzgCIzgCIzACIzCC3tWD
         QMIDbeCtX/KH9Ar390KTu4gQ6nmUyjSo75QEmCa75xv7si+Zyslk0mAk0DV/4odQpuJELw6NAChi3LfV
         pkpfOexOd2JeToKH2fN7LQDEHHZjjhExqLwWoKs5kpCX/b91MOqqclWb3sxuthFxhmJ7AX2YK7ytH8pN
         1TkZucIXyVa1qhHR5w9GrgQjb4KRN8HIm2DkzdDITjjUqnlvMbr2j88mojHLLnBIxJb7kWDKxYSdlXL3
@@ -156,7 +274,7 @@
   <data name="button3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAfCAYAAAD5h919AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAU1JREFUSEvtltERwiAMhjtCN9ANHEE3KG+FSgt3DuAIjuAIjuIIjuAIjqABAtKe
+        DwAACw8BkvkDpQAAAU1JREFUSEvtltERwiAMhjtCN9ANHEE3KG+FSgt3DuAIjuAIjuIIjuAIjqABAtKe
         ehDRF/3uuIOQ5G9Jr6TKRYh+KcSgcPkZ2nZouk5d3RgaNJeFcz4HgctdSF3aVi5wuwxGRAh1jkTscLZu
         hm7vwRirI5FTJOTnJ8Z0je50INEBE4LYZobzq9a6dja7PqA7DSj4DhNZEWdzQmbOuQ5143zYGVs2ILL1
         SaXUKzSPhAx93y+9Db7KLZrTkFIufPD0Sb0dl5b4obK+RAiwdXl0HD4hLgPrtdrjXnq93NlrjcsRz4QM
@@ -168,7 +286,7 @@
   <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAfCAYAAAD5h919AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAVNJREFUSEvtld1xwyAQhFWCO4g7cAlJB+bNCBFgkgJcgktwCSkhJbgEleASXEJy
+        DwAACw8BkvkDpQAAAVNJREFUSEvtld1xwyAQhFWCO4g7cAlJB+bNCBFgkgJcgktwCSkhJbgEleASXEJy
         y9wREkFka6Q3fTM3A6djF0n8NI+ilNoYY564uxxt668I7i6HMf4Lwd3lWI0msxpNZjWazKxGh4Pb03l2
         KR2eNSOt9ZbGfNLYI6fG6Tp/hhgOT6XChtORkhGbXHnMmdPjhBDoKvA9D7xwOlIyQg3nBxNL1O4XrcMW
         AyGQz5IFkxGecY5q3wc6SZ8KIXbj/C+stTs8g5DW7oQci0YjY9wJbfrUN2vfdsj9JennA0u0rfNSQ8J7
@@ -180,7 +298,7 @@
   <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAdCAYAAAC0T3x2AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAYdJREFUSEvtVsFxwyAQTAnuwO5AJSQdWD8hhCQmLsAlpISU4BJSgktwCSrBJTi3
+        DwAACw8BkvkDpQAAAYdJREFUSEvtVsFxwyAQTAnuwO5AJSQdWD8hhCQmLsAlpISU4BJSgktwCSrBJTi3
         aCUTAx7Jo3wS78zNSOxxCxwcvMxFnucrGH9/B2VZv2rdnsuy7fDN5mWhdbMXkYtvSjUfpJeBzODTDy6i
         Yv0/OLo9DqXURgKdELCqsGRNS2qY4ZmC4qPXpObBGJMhFwzUGfOekRqhlN2Ag0/vO1MMI5fObrQyk6PW
         u2QAirlZw4qi2ZO6j0fXXwb0I49sDoGzIYFl9L0zckBqMvydKbG+gqVk0r182DdSs4HcIgbFrnkj4e2e
@@ -193,7 +311,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAU4AAABiCAYAAAA/SjqQAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAALJ1JREFUeF7tXQl8lNW1ny5kIctk9oQtIQRIAmQls2RfFAQRZAmZmbCTjQRrrYoE
+        DwAACw8BkvkDpQAALJ1JREFUeF7tXQl8lNW1ny5kIctk9oQtIQRIAmQls2RfFAQRZAmZmbCTjQRrrYoE
         aht9ta3PCgTUFlufrW2VzEStT2vVtlqfvgpJqnVvn+3ztWqrte51wQXe+d/vO+HLMFlARWnP//c7v29y
         13PvPfd/z73fEpNAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKB
         QCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAg+DhQUn9tqs8f
