--- a/Inventory/Admin/rwyt_brg_out.resx
+++ b/Inventory/Admin/rwyt_brg_out.resx
@@ -121,13 +121,13 @@
   <data name="gunaButton7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAEAAAApCAYAAAD06kPSAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAABBJREFUGFdj+A8Ew4P4/x8AbPKjXS/Z/asAAAAASUVORK5CYII=
+        DAAACwwBP0AiyAAAABBJREFUGFdj+A8Ew4P4/x8AbPKjXS/Z/asAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="gunaButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAEAAAApCAYAAAD06kPSAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAABBJREFUGFdj+A8Ew4P4/x8AbPKjXS/Z/asAAAAASUVORK5CYII=
+        DAAACwwBP0AiyAAAABBJREFUGFdj+A8Ew4P4/x8AbPKjXS/Z/asAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="gunaButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -136,17 +136,22 @@
         DAAACwwBP0AiyAAAABBJREFUGFdj+A8Ew4P4/x8AbPKjXS/Z/asAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="gunaButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAEBJREFUSEtjEE67+Z+WeHBZAAPY5HDhUQsI4lELCOJhZAG1Af0tIAbDADY5XHjU
-        AoJ41AKCeIRZQA6msQU3/wMAeLG1UNZDU+IAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="gunaButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAAEAAAApCAYAAAD06kPSAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAABBJREFUGFdj+A8Ew4P4/x8AbPKjXS/Z/asAAAAASUVORK5CYII=
-</value>
-  </data>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
