--- a/Inventory/Auth/Register.resx
+++ b/Inventory/Auth/Register.resx
@@ -2603,4 +2603,69 @@
         cW8LeoN2EwB4cTkpt6igxrDESQ0zIGXDPG/joZJZ/wD/2Q==
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAGyAAAAEAIAAoDgAAFgAAACgAAAAbAAAAQAAAAAEAIAAAAAAAgA0AABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA021mANNtZgDTbWYB021mAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAyH5hAMh+YQDIfmEByH5hAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAMqVdgDJmHUDy5J4SMuSeJjKkXiZypF4ScuNeQPLjngAAAAAAAAAAADKkHkAyZF2GcqR
+        eHrLknmjypF4ecqRehvJknsAzI93AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAy5J6AMqS
+        eADKkng/y5J5ysuSeYvKknmNypF4zMqQdz7KkHgAypJ3AMqQdwDLjncIypF4k8uReLbLkXl2ypF5t8qR
+        eZfKjncIyY54AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAyZJ5AOx8YwDKkXiGy5J5msqS
+        eQTJkXUFy5J4nMuReITAgGcAypB3AMuReQDLkXgoy5J5xMuSeTvKknkAypF4OMqSeMrKkHgoyZB4AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAypF5AMuSdQDKkXh7y5J5q8qQeBLKkHgSypJ5rMqS
+        eHrVsYkAyY12AMuSeADKkXgiy5J5wsuSeU/GjnQDypJ5TcqSecbKkHchypB3AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAzY99AMmSdwDJkXcpy5J4vcqRebPKknmyypF4vcqReCvKkXgAAAAAAMuR
+        eQDJj3gDy5F5dMuRecjKknimypJ5ysqReXfJj3gDyJB5AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAANOmiAC2VE8Azpd+I82Ue2LMlHxizpmAIZg+DwD55OEAAAAAAAAAAADOmH8A0p+HB82V
+        fEXNlHttzJR8R8+YggjOl4EAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAoWIkAJ9l
+        FwGpWTcgqVg3SKhXNk+oVzZPqVg3UKlZOFKpWThSqVk4UqlZOFKpWThSqVk4UahXNk+pWDZPqFc2T6lZ
+        NzqoWTYLqFw4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAq1o2AKtaODirWji8q1k4w6ta
+        Ob6rWjm+q1o5vqtaOb6rWjm+q1o5vqtaOb6rWjm+q1o5vqtaOb6rWjm+q1o5vqtaOMyqWTiEqVk3CqlZ
+        NwAAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAACpWTQAqFg0BqpZOJ2rWjmUq1c4GqtZORGrWTkSq1k5EqtZ
+        ORGrWTkSq1k5EqtZORKrWTkSq1k5EqtZORKrWTkSq1k4EqpZN0WqWTjNqlk4Q6pZOAAAAAAAAAAAAQAA
+        AAYAAAAAAAAAAAAAAACqWjgAqlo4GataOb+qWjhGqlo4AAAAAACsVjgArFU4AatZOAypXDQDqVw1AAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAqlg3AKlZOAaqWjmkqlk4dKxeQABYKxcAAAAAAQAAAAgAAAAAAAAAAAAA
+        AACrWjgAq1o4NataOMWqWTgkqlk4AKdaNwC0XT0Aqlk4P6paOaSqWjgkqlo4AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAArFoyAKpZPACrWjl/qlk4nKdUNwOWTTIAAAAAAQAAAAcAAAAAAAAAAJY4JACtXToAq1k4YqpZ
+        OLSpWTcNqVk3AMJXOQCqWTg/qlo4x6pZOH6rVjUJq1c2AAAAAAAAAAAAAAAAAAAAAAAAAAAAqVo2AKpZ
+        OgCqWTlTq1o5vqtZOBOlVjYAAAAAAQAAAAcAAAAAAAAAAKZXNQCQSiQBqlo4i6pZOI2kUS8CpmE2AKpZ
+        ODyqWjnQqlo5oqtZOC2rWjkhq1o5IqtaOSKrWjkiq1o5IqtaOSKrWjkiq1o5IqtaOSCqWjhMq1k4zqpZ
+        OC+mVzYAAAAAAQAAAAoAAAAAAAAAAKtZOACrWTgLq1o4rapZOGSrWTkAqlc4CapaOKGrWjn+q1o52Kta
+        OcurWjnNq1o5zataOc2rWjnNq1o5zataOc2rWjnNq1o5zataOc2rWjnRq1o56KtaOFGpWzkAAAAAAgAA
+        AAoAAAAAAAAAAKpZNwCpWTcdqlk4wqpZOD2qWTkAxHF1AKpZOEWrWTjWqlg4pqtYNzmrWDgwq1g4MatY
+        ODGrWDgxq1g4MatYODGrWDgxq1g4MatYODGrWDgzq1o4qapaOHunXDcAAAAAAQAAAAYAAAAAAAAAAKpZ
+        OACqWThDq1k4w6paOB2qWTgAqlcvAKpGAACqWThIqlk4yqpZOHWnWDcHqFg3AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAKhYOACuXDkAq1o4dataOaapWDgGuWE9AAAAAAIAAAAAp1M3AK1eOQCqWThqqlo4q6lb
+        NQupWzUAAAAAAKpYMQCqVgAAqlk4S6pZOLGpWDgoqlk4AAAAAACqWTgAqlk4PapZOGCqWDgJq1g4AAAA
+        AACrWTgAqlk4SKtaOMKqWDcZqlg3AAAAAAAAAAAAqVg4AKJRNwGrWjiPqlo5hEROAACnWjUAAAAAAAAA
+        AACoWTUAqFk1AqlYNxupWDcIqVg3AAAAAACsWjgAqlo4N6taOMarWjh7qlk2CapaNwCqWDgAqlg4I6pZ
+        OcOqWTg3q1g5AJxjGAAAAAAAqlg3AKlWNQarWTigqlo5b6xyQwCrWjkCq1o5AqtaOQKrWjkCq1o5Aqxb
+        OgCrWjoBq1o5AqtaOQKrWzkCqEgtAapaOEWrWjjLq1o4eKpbNwirWTgArFc4D6tZObOqWThaqlw7AKpU
+        MAAAAAAAqVk2AJ9UHQCqWjhyq1o5zqtaObGrWjmwq1o5sKtaObCrWjmwq1o5sKtaObCrWjmwq1o5sKta
+        ObCrWjmwq1o5sKtaObCrWjneq1o586tZOF2rWDoAqFIzAqtZOZaqWTiHvWpLAKlYNwAAAAAAq1UeAKpZ
+        OwCpWDYOqlk4UKtaOHarWjh3q1o4d6taOHerWjh3q1o4d6taOHerWjh3q1o4d6taOHerWjh3q1o4dqtZ
+        OH2rWjjSq1o436tZN0SsWjgAq1o6AKpZOGmqWTiyqVk3CalaNwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACpVzUAqFY0BKpZN2yqWTjKqlk4TahR
+        MQGqVzYAq1o4AKtZNzyrWjjDqlo4H6paOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACqWTgAqlk4S6pZOMOqWThNqlQ4AapYOAAAAAAAq1k3AKta
+        NxyqWjjCq1o4a6taOS4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACqWToAqlk4J6pZODSnVzABqFgzAAAAAAAAAAAAqVMzAKhQMQOqWThkq1o5yqta
+        OdIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKpWNgCqVzYDq1k3HKtZNyoAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/v9/g/A8H4PwOA+D8DiPg/A4D4PwO
+        A+D+Hwfg+AAD4PgAAcDwAAGA8cfxgPHH+IDxh/iA4QAAgOIAAIDjAACA44f8QOPHHGDHxwxgxBAEYOAA
+        BGDgAAYg//8GIP//DgD//x4A////AP///+D////g////4P///+D////g////4A==
+</value>
+  </data>
 </root>
